[metadata]
name = landscape
author = Shane Ramey
author-email = shane.ramey@gmail.com
maintainer = Shane Ramey
maintainer-email = shane.ramey@gmail.com
summary = Apply Helm Charts using Landscaper
home-page = https://github.com/shaneramey/landscape
license = Apache 2.0
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        Natural Language :: English
        Operating System :: POSIX
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Topic :: System :: Deployment
        Topic :: Utilities
requires-dist =
    docopt
    hvac
    PyYaml
keywords = Kubernetes Landscaper Helm Charts

[files]
packages =
    landscape

[entry_points]
console_scripts =
     landscape = landscape.main:main
