[metadata]
name = landscape
author = Shane Ramey
author-email = sramey@oreilly.com
maintainer-email = sramey@oreilly.com
summary = Apply Helm Charts using Landscaper
home-page = https://github.com/oreillymedia/landscape
license = Apache 2.0
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        Natural Language :: English
        Operating System :: POSIX
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Topic :: System :: Deployment
        Topic :: Utilities
requires-dist =
    docopt
    hvac
    PyYaml
    sh
keywords = Kubernetes Landscaper Helm Charts

[files]
packages =
    landscape
data_files =
    terraform = terraform/*

[entry_points]
console_scripts =
     landscape = landscape.main:main
